--- a/style.css
+++ b/style.css
@@ -66,9 +66,19 @@ h1 {
     position: relative;
 }
 
-.product img {
+.product .image-slider {
+    display: flex;
+    overflow-x: scroll;
+}
+
+.product .image-slider img {
     width: 100%;
     border-radius: 10px;
+    margin-right: 10px;
+    flex-shrink: 0;
+    max-width: 100%;
+    max-height: 200px;
+    object-fit: cover;
 }
 
 .product h2 {
